cabal-version:      2.4
name:               Leetcode
version:            0.1.0.0
synopsis:           Solving leetcode problems

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             tushar
maintainer:         tusharadhatrao@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
                      ,Arrays.TwoSum

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                      ,vector
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite Leetcode-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    other-modules:    Arrays.TwoSum
    hs-source-dirs:   test
                      ,src
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
                      ,vector
